# PdM

./: .gitignore  README.md
CppPractice/PW1_Exercise_1/: .clang-tidy  CMakeLists.txt  CMakePresets.json  Dependencies.cmake  ProjectOptions.cmake  justfile
CppPractice/PW1_Exercise_1/cmake/: CompilerWarnings.cmake  Hardening.cmake  Sanitizers.cmake  StandardProjectSettings.cmake  Tests.cmake
CppPractice/PW1_Exercise_1/libs/: CMakeLists.txt
CppPractice/PW1_Exercise_1/src/: CMakeLists.txt  main.cpp
CppPractice/PW1_Exercise_1/src/include/: main.hpp  stm32f4xx_hal_conf.h
CppPractice/PW1_Exercise_1_ide/: .project  README.org
CppPractice/PW1_Exercise_1_ide/Inc/: stm32f4xx_hal_conf.h
CppPractice/PW1_Exercise_1_ide/Local/: makefile  sources.mk
Ej0_blinky/Src/: main.c
Ej1_pushButton/Inc/: main.h
Ej1_pushButton/Src/: main.c
Ej2_uart/Inc/: main.h
Ej2_uart/Src/: main.c
Ejercicio_delayNB_1/Src/: main.c
PW1_Exercise_1/: .project
PW1_Exercise_1/Src/: main.c
PW1_Exercise_2/: .project
PW1_Exercise_2/Inc/: stm32f4xx_hal_conf.h
PW1_Exercise_2/Src/: main.c
PW2_Exercise/: .project
PW2_Exercise/Inc/: main.h
PW2_Exercise/Src/: main.c
PW2_Exercise_1/: .project  README.org
PW2_Exercise_1/Inc/: main.h
PW2_Exercise_1/Src/: main.c
PW3_Exercise/: .project
PW3_Exercise/Inc/: main.h
PW3_Exercise/Src/: main.c
PW4_Excercise1/: .project  README.org
PW4_Excercise1/Src/: main.c
PW4_Excercise2/: .cproject  .project
PW4_Excercise2/Src/: main.c
PW5_Excercise/: .project  README.org
PW5_Excercise/Src/: main.c
(+401 files in other folders)
